+ major rewrite of episode metadata / SeriesInfo